--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vue": "^2.2.0",
+    "astro": "^2.5.0",
+    "daisyui": "^2.52.0",
+    "tailwindcss": "^3.0.24",
+    "vue": "^3.2.30"
   }
 }
